# NCamAndroid

./: .gitignore  .gitmodules  COMPILE_ERRORS.md  README.md  gradlew  gradlew.bat  settings.gradle  setup_ncam_source.sh
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ncam.conf
app/src/main/cpp/: CMakeLists.txt  android_compat.h  android_signing_stub.c  android_stubs.c  jni_bridge.cpp
app/src/main/cpp/android/: log.h
app/src/main/cpp/ncam/: config.h  globals.h  module-webif.c  ncam-chk.c  ncam-client.c  ncam-conf.c  ncam-garbage.c  ncam-log.c  ncam-net.c  ncam-sched.c  ncam.c
app/src/main/cpp/ncam/webif/: pages_gen.c  pages_index.txt
app/src/main/cpp/ncam/webif/config/: dvbapi.html  global.html
app/src/main/cpp/ncam/webif/readerconfig/: readerconfig.html
app/src/main/java/com/ncam/app/: BootReceiver.kt  MainActivity.kt  NCamJNI.kt  NCamService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
